--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
     implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+
+    implementation 'com.apandroid:colorwheel:1.0.3'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.11'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
